Fixed mobile X alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -87,6 +87,6 @@ h2 {
   display: block;
   position: absolute;
   top: 644px;
-  left: 120px;
+  left: 110px;
   max-height: 10%;
 }
